--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="https://www.linkedin.com/in/gustavo-andres-salazar-gomez/"><img style="width:100%;max-width:100%" alt="profile photo" src="images/foto2.jpeg" class="hoverZoomLink"></a>
+              <a href="https://www.linkedin.com/in/gustavo-andres-salazar-gomez/"><img style="width:100%;max-width:100%" alt="profile photo" src="images/foto2.jpg" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
