--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
-                Source code stolen from <a href="https://jonbarron.info/">Jon Barron</a>.
+                Source code stolen from <a href="https://jonbarron.info/">Jon Barron</a> and <a href=" https://mikes96.github.io/">Miguel Saavedra</a>.
               </p>
             </td>
           </tr>
