changes 3d project links

--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
                 </script>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://github.com/MikeS96/3d_obj_detection">
+                <a href="https://github.com/gsg213/3d_obj_detection">
                   <papertitle>3D object detector for vehicles using classic Machine Learning</papertitle>
                 </a>
                 <br>
-                <strong>Miguel Saavedra-Ruiz</strong>,
-                <a href="https://www.linkedin.com/in/gustavo-andres-salazar-gomez/">Gustavo Salazar</a>
+                <strong>Gustavo Salazar</strong>,
+                <a href="https://www.linkedin.com/in/miguel-a-saavedra-ruiz">Miguel Saavedra-Ruiz</a>
                 <br>
-                <a href="https://github.com/MikeS96/3d_obj_detection">code</a> /
+                <a href="https://github.com/gsg213/3d_obj_detection">code</a> /
                 <a href="data/3d_detection_car_report.pdf">report</a> /
                 <a href="data/3dMachineLearning.txt">description</a> 
                 <p></p>
@@ -249,7 +249,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
-                Source code stolen from <a href="https://jonbarron.info/">Jon Barron</a> and <a href=" https://mikes96.github.io/">Miguel Saavedra</a>.
+                Source code stolen from <a href="https://jonbarron.info/">Jon Barron</a> and <a href="https://mikes96.github.io/">Miguel Saavedra-Ruiz</a>.
               </p>
             </td>
           </tr>
