add course reference

--- a/index.html
+++ b/index.html
@@ -236,10 +236,7 @@
             <heading>Courses and Certifications</heading>
             <ul>
               <li> 
-                <strong>Reinforcement Learning</strong> by University of Alberta & Alberta Machine Intelligence Institute on Coursera. Certificate earned at June 21, 2020. <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/ZUNADAFYKHPH">[Credential]</a>
-              </li>
-              <li> 
-                <strong>Self-Driving Cars</strong> a 4-course specialization by University of Toronto on Coursera. Specialization Certificate earned on June 5, 2019. <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/78KLAA9EGVRP">[Credential]</a>
+                <strong>Introduction to Satellite Communications</strong> by Institut Mines-Télécom on Coursera. Certificate earned on January 2, 2020. <a href="https://www.coursera.org/account/accomplishments/verify/644NFSTMSB3J">[Credential]</a>
               </li>
             </ul>
           </td>
