--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
               <p style="text-align:center">
                 <name>Gustavo A. Salazar-Gomez</name>
               </p>
-              <p>I am a Postgraduate Diploma student in Artificial Intelligence at <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente (UAO)</a> and a Machine Learning Engineer at <a href="https://whaleandjaguar.co/">Whale & Jaguar</a>. My past work was as a R&D Robotics Software Engineer 
-                at <a href="http://romerocanoingenieria.com/">Romero Cano Ingenieria (RCI)</a> where I worked on Robotics vision, Multi-modal sensor fusion, AI and UAVs. 
+              <p>I am a Mechatronics Engineer looking for a thrilling MSc related to Robotics, Intelligent control systems, Artificial intelligence, Computer vision or Deep learning. Currently, I am in the last semester of a Postgraduate Diploma in Artificial Intelligence 
+                at <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente (UAO)</a>. 
               </p>
               <p>
                 Previously, I obtained a BEng degree as Mechatronics Engineering with emphasis in Robotics from the UAO. There, I had the chance to work under the supervision of <a href="https://scholar.google.com.au/citations?user=x3M1JlAAAAAJ&hl=en"> Victor Romero-Cano</a>
