--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <p style="text-align:center">
                 <name>Gustavo A. Salazar-Gomez</name>
               </p>
-              <pI am a Mechatronics Engineer looking for a thrilling MSc related to Robotics, Intelligent control systems or Artificial intelligence where I can work and research in topics such as Mobile robotics, Aerospace, Computer vision, Machine learning and Deep learning. 
+              <p>I am a Mechatronics Engineer looking for a thrilling MSc related to Robotics, Intelligent control systems or Artificial intelligence where I can work and research in topics such as Mobile robotics, Aerospace, Computer vision, Machine learning and Deep learning. 
                   Also, I am in the last semester of a Postgraduate Diploma in Artificial Intelligence at <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente (UAO)</a>. 
               </p>
               <p>
