--- a/index.html
+++ b/index.html
@@ -58,34 +58,18 @@
         <hr>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-            <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Research</heading>
-              <p>
-                I am broadly interested in the areas of <strong>Robotics vision</strong>, <strong>Machine Learning</strong>, <strong>Reinforcement Learning</strong>, <strong>Artificial Intelligence</strong>, <strong>Computer Vision</strong>, <strong>SLAM</strong> and <strong>Graphical Models</strong>. Much of my research 
-                is motivated by the next question: "How can intelligent systems be endowed with environmental awareness to start perceiving them surrounding in an accurate and reliable way and thus, enhance their decision-making capabilities?"
-              </p>
-            </td>
-          </tr>
-        </tbody></table>
-        <hr>
-
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">  
             <heading>News</heading>
             <ul>
               <li> 
-                <font color="red"><strong>[December 2020]</strong></font> I am joining the <a href="https://whaleandjaguar.co/">Whale & Jaguar</a>'s team as a Machine Learning Engineer. 
-              </li>
-              <li> 
-                <strong>[August 2020]</strong> I have been accepted into the <a href="https://riiaa.org/en/home/">RIIAA</a> online summer school in RL and Bayesian inference as an active track. 
-              </li>
-              <li> 
                 <strong>[August 2020]</strong> Started a Postgraduate Diploma in Artificial Intelligence at <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente</a>, the degree will end in May 2021.
               </li>
+		<li> 
+                <strong>[Jan 2019]</strong> The paper "Application of Transfer Learning for Object Recognition Using Convolutional Neural Networks" was selected to be published as an extended version in <a href="https://link.springer.com/book/10.1007/978-3-030-03023-0">Applications of Computational Intelligence</a> part of the <a href="https://link.springer.com/bookseries/7899">Communications in Computer and Information Science</a> book series (CCIS, volume 833).
+              </li>
               <li> 
-                <strong>[Jul 2020]</strong> The paper "Monocular visual autonomous landing system for quadcopter drones using software in the loop" has been sent to the journal <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=62">Aerospace & Electronics Systems Magazine</a>  IEEE (Under review).
+                <strong>[May 2018]</strong> The paper "Application of Transfer Learning for Object Recognition Using Convolutional Neural Networks" was published in the conference <a href="https://ieeexplore.ieee.org/xpl/conhome/8471295/proceeding">IEEE Colombian Conference on Applications in Computational Intelligence (ColCACI)</a>.
               </li>
             </ul>
           </td>
