--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <strong>[August 2020]</strong> Started a Postgraduate Diploma in Artificial Intelligence at <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente</a>, the degree will end in June 2021.
               </li>
 		<li> 
-                <strong>[Jan 2019]</strong> The paper "Application of Transfer Learning for Object Recognition Using Convolutional Neural Networks" was selected to be published as an extended version in <a href="https://link.springer.com/book/10.1007/978-3-030-03023-0">Applications of Computational Intelligence</a> part of the <a href="https://link.springer.com/bookseries/7899">Springer Communications in Computer and Information Science</a> book series (CCIS, volume 833).
+                <strong>[January 2019]</strong> The article "Application of Transfer Learning for Object Recognition Using Convolutional Neural Networks" was selected to be published as an extended version in <a href="https://link.springer.com/book/10.1007/978-3-030-03023-0">Applications of Computational Intelligence</a> book part of the <a href="https://link.springer.com/bookseries/7899">Springer Communications in Computer and Information Science</a> book series (CCIS, volume 833).
               </li>
               <li> 
                 <strong>[May 2018]</strong> The paper "Application of Transfer Learning for Object Recognition Using Convolutional Neural Networks" was published in the conference <a href="https://ieeexplore.ieee.org/xpl/conhome/8471295/proceeding">IEEE Colombian Conference on Applications in Computational Intelligence (ColCACI)</a>.
