--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   Also, I am in the last semester of a Postgraduate Diploma in Artificial Intelligence at <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente (UAO)</a>. 
               </p>
               <p>
-                My BEng <a href="https://red.uao.edu.co/handle/10614/10153">degree project</a> was entitled “Object recognition in images using deep learning” where I used transfer learning in order to retrain the last layers of inception-v3 neural network and created new categories from a specific environment under the supervision Jesus Alfonso Lopez at UAO.  
+                My BEng <a href="https://red.uao.edu.co/handle/10614/10153">degree project</a> was entitled “Object recognition in images using deep learning” where I used transfer learning in order to retrain the last layers of inception-v3 neural network and created new categories from a specific environment under the supervision of <a href="https://scholar.google.com/citations?user=7PIjh_MAAAAJ&hl=en"> Jesus Alfonso Lopez</a> at UAO.  
               </p>
               <p>
                 Currently, I’m working as Product specialist at Open International, being part of the support team as First level engineer where I’m in charge of technical and functional duties, working side by side and supporting our customer in tasks related to the configuration 
