--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="https://scholar.google.com/citations?hl=es&user=watU8NkAAAAJ">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.linkedin.com/in/gustavo-andres-salazar-gomez/">Linkedin</a> &nbsp/&nbsp
                 <a href="mailto:gustavo.salazar@uao.edu.co">Email</a> &nbsp/&nbsp
-                <a href="">CV</a>
+                <a href="data/Gustavo_A_Salazar_Gomez.pdf">CV</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
