IEEE publication added

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <td style="padding:20px;width:25%;vertical-align:middle">
             <heading>Publications</heading>
           </td>
-<!--
+
           <tr onmouseout="dtl_stop()" onmouseover="dtl_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
@@ -102,25 +102,20 @@
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://github.com/MikeS96/autonomous_landing_uav/tree/master/object_detector">
-                <papertitle>Detection and tracking of a landing platform for aerial robotics applications</papertitle>
+              <a href="https://ieeexplore.ieee.org/document/8484856">
+                <papertitle>Application of Transfer Learning for Object Recognition Using Convolutional Neural Networks</papertitle>
               </a>
               <br>
-              <strong>Miguel Saavedra-Ruiz</strong>,
-              <a href="https://www.linkedin.com/in/ana-maria-pinto-b380b017a/">Ana Pinto</a>,
-              <a href="https://scholar.google.com.au/citations?user=x3M1JlAAAAAJ&hl=en">Victor Romero-Cano</a>
+              <strong>Gustavo A. Salazar-Gomez</strong>,
+              <a href="https://www.linkedin.com/in/nicolas-diaz-salazar-792260137/">Nicolas Diaz Pinto</a>,
+              <a href="https://scholar.google.com/citations?user=7PIjh_MAAAAJ&hl=en">Jesus Alfonso Lopez</a>
               <br>
-              <em>CCRA</em>, 2018 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font> 
-              <br>
-              <a href="https://github.com/MikeS96/autonomous_landing_uav/tree/master/object_detector">code</a> /
-              <a href="data/SaavedraCCRA2018.bib">bibtex</a> /
-              <a href="https://www.youtube.com/watch?v=knH2Hju--3I&feature=emb_title">video</a> /
               <a href="data/detectionTracking.txt">description</a> 
               <p></p>
-              <p>Object Detection and tracking pipelines to detect a landing pad on the ground from a UAV.</p>
+              <p>the transfer learning technique is used to create a computational tool that recognizes the objects of the automatic laboratory of the Universidad Autónoma de Occidente in real time. As a pre-trained neural net, the Inception-V3 is used.</p>
             </td>
           </tr> 
-
+<!--
           <tr onmouseout="dals_stop()" onmouseover="dals_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
