IEEE publication added

--- a/index.html
+++ b/index.html
@@ -103,16 +103,16 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://ieeexplore.ieee.org/document/8484856">
-                <papertitle>Application of Transfer Learning for Object Recognition Using Convolutional Neural Networks</papertitle>
+                <papertitle>IEEE - Application of Transfer Learning for Object Recognition Using Convolutional Neural Networks</papertitle>
               </a>
               <br>
               <strong>Gustavo A. Salazar-Gomez</strong>,
-              <a href="https://www.linkedin.com/in/nicolas-diaz-salazar-792260137/">Nicolas Diaz Pinto</a>,
+              <a href="https://www.linkedin.com/in/nicolas-diaz-salazar-792260137/">Nicolas Diaz</a>,
               <a href="https://scholar.google.com/citations?user=7PIjh_MAAAAJ&hl=en">Jesus Alfonso Lopez</a>
               <br>
-              <a href="data/detectionTracking.txt">description</a> 
+              <a>description</a> 
               <p></p>
-              <p>the transfer learning technique is used to create a computational tool that recognizes the objects of the automatic laboratory of the Universidad Autónoma de Occidente in real time. As a pre-trained neural net, the Inception-V3 is used.</p>
+              <p>The transfer learning technique is used to create a computational tool that recognizes the objects of the automatic laboratory of the Universidad Autónoma de Occidente in real time. As a pre-trained neural net, the Inception-V3 is used.</p>
             </td>
           </tr> 
 <!--
