Springer publication added

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <br>
               <a>description</a> 
               <p></p>
-              <p>The transfer learning technique is used to create a computational tool that recognizes the objects of the automatic laboratory of the Universidad Autónoma de Occidente in real time. The Inception-V3 is used as a pre-trained CNN.</p>
+              <p>A transfer learning technique is used to create a computational tool that recognizes the objects of the automatic laboratory of the Universidad Autónoma de Occidente in real time. The Inception-V3 is used as a pre-trained CNN.</p>
             </td>
           </tr>
 
