--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='dtl_image'>
-                  <img src='images/detection_ccra_after.png' width="160"></div>
-                <img src='images/detection_ccra_before.png' width="160">
+                  <img src='images/image_fuente.png' width="160"></div>
+                <img src='images/image_plc.png' width="160">
               </div>
               <script type="text/javascript">
                 function dtl_start() {
@@ -120,8 +120,8 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
                 <div class="two" id='dtl_image'>
-                  <img src='images/detection_ccra_after.png' width="160"></div>
-                <img src='images/detection_ccra_before.png' width="160">
+                  <img src='images/image_gen_senal.png' width="160"></div>
+                <img src='images/image_planta_piloto.png' width="160">
               </div>
               <script type="text/javascript">
                 function dtl_start() {
