--- a/index.html
+++ b/index.html
@@ -116,20 +116,20 @@
             </td>
           </tr>
 
-         <tr onmouseout="dtl_stop()" onmouseover="dtl_start()">
+         <tr onmouseout="dsp_stop()" onmouseover="dsp_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='dtl_image'>
+                <div class="two" id='dsp_image'>
                   <img src='images/image_gen_senal.png' width="160"></div>
                 <img src='images/image_planta_piloto.png' width="160">
               </div>
               <script type="text/javascript">
                 function dtl_start() {
-                  document.getElementById('dtl_image').style.opacity = "1";
+                  document.getElementById('dsp_image').style.opacity = "1";
                 }
 
                 function dtl_stop() {
-                  document.getElementById('dtl_image').style.opacity = "0";
+                  document.getElementById('dsp_image').style.opacity = "0";
                 }
                 dtl_stop()
               </script>
