--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
                 <img src='images/image_planta_piloto.png' width="160">
               </div>
               <script type="text/javascript">
-                function dtl_start() {
+                function dsp_start() {
                   document.getElementById('dsp_image').style.opacity = "1";
                 }
 
                 function dtl_stop() {
                   document.getElementById('dsp_image').style.opacity = "0";
                 }
-                dtl_stop()
+                dsp_stop()
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
