--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   document.getElementById('dsp_image').style.opacity = "1";
                 }
 
-                function dtl_stop() {
+                function dsp_stop() {
                   document.getElementById('dsp_image').style.opacity = "0";
                 }
                 dsp_stop()
