--- a/index.html
+++ b/index.html
@@ -232,7 +232,39 @@
                 <p></p>
                 <p>3D object detection of vehicles in the NuScenes dataset using classic Machine learning such as DBSCAN and SVMs.</p>
               </td>
-            </tr>             
+            </tr>  
+		  
+		  
+            <tr onmouseout="sdk_stop()" onmouseover="sdk_start()">
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='sdk_image'>
+                    <img src='images/sudoku_1.jpg' width="160"></div>
+                  <img src='images/sudoku_2.jpg' width="160">
+                </div>
+                <script type="text/javascript">
+                  function sdk_start() {
+                    document.getElementById('sdk_image').style.opacity = "1";
+                  }
+  
+                  function sdk_stop() {
+                    document.getElementById('sdk_image').style.opacity = "0";
+                  }
+                  sdk_stop()
+                </script>
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="https://github.com/gsg213/Sudoku-Recognizer">
+                  <papertitle>Sudoku recognizer with OpenCV</papertitle>
+                </a>
+                <br>
+                <strong>Gustavo Salazar</strong>,
+                <br>
+                <a href="https://github.com/gsg213/Sudoku-Recognizer">code</a> /
+                <p></p>
+                <p>Sudoku recognizer using OpenCV to process the image, and a KNN as ML model to classify each digit found, finally the result is displayed in a grid where the numbers are in the same position as the image.</p>
+              </td>
+            </tr>  		  
 
           </tbody></table>
           <hr>
