--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
                   <papertitle>Sudoku recognizer with OpenCV</papertitle>
                 </a>
                 <br>
-                <strong>Gustavo Salazar</strong>,
+                <strong>Gustavo Salazar</strong>
                 <br>
-                <a href="https://github.com/gsg213/Sudoku-Recognizer">code</a> /
+                <a href="https://github.com/gsg213/Sudoku-Recognizer">code</a> 
                 <p></p>
                 <p>Sudoku recognizer using OpenCV to process the image, and a KNN as ML model to classify each digit found, finally the result is displayed in a grid where the numbers are in the same position as the image.</p>
               </td>
