--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="one">
                   <div class="two" id='lbp_image'>
                     <img src='images/lbp.gif' width="160"></div>
-                  <img src='images/lbp.gif' width="160">
+                  <img src='images/LBP_1.jpg' width="160">
                 </div>
                 <script type="text/javascript">
                   function lbp_start() {
