--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <br>
                 <a href="https://github.com/gsg213/Machine_Learning">code</a>
                 <p></p>
-                <p>Machine learning projects from Supervised methods like KNN, Decission Trees and ANN, and Unsupervised methods like DBSCAN and PCA, finally feature engineering to improve models performance.</p>
+                <p>Machine Learning projects from Supervised methods like KNN, Decision Trees and ANN, and Unsupervised methods like DBSCAN and PCA, finally feature engineering to improve models performance.</p>
               </td>
             </tr>   
 
