--- a/index.html
+++ b/index.html
@@ -197,40 +197,41 @@
                         <td style="padding:20px;width:25%;vertical-align:middle">
                            <heading>Projects</heading>
                         </td>
-            <tr onmouseout="style_stop()" onmouseover="style_start()">
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <div class="one">
-                  <div class="two" id='style_image'>
-                    <img src='images/style_after.gif' width="160"></div>
-                  <img src='images/style_before.png' width="160">
-                </div>
-                <script type="text/javascript">
-                  function style_start() {
-                    document.getElementById('style_image').style.opacity = "1";
-                  }
-  
-                  function style_stop() {
-                    document.getElementById('style_image').style.opacity = "0";
-                  }
-                  style_stop()
-                </script>
-              </td>
-              <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://github.com/zestian56/style-transfer">
-                  <papertitle>Style-transfer for the creation of aesthetic images</papertitle>
-                </a>
-                <br>
-                <strong>Gustavo A. Salazar-Gomez</strong>,
-                <a href="https://github.com/MikeS96">Miguel Saavedra</a>,
-                <a href="https://github.com/zestian56">Sebastian Botero</a>
-                <br>
-                <a href="https://github.com/zestian56/style-transfer">code</a> /
-                <a href="data/styleTransfer.pdf">report (spanish)</a> /
-                <a href="data/styleTransfer.txt">description</a> 
-                <p></p>
-                <p>Style-transfer implementarion based on the paper <a href="https://arxiv.org/abs/1508.06576">A neural algorithm of artistic style</a> using VGG-19.</p>
-              </td>
-            </tr>                         
+                        <tr onmouseout="style_stop()" onmouseover="style_start()">
+                           <td style="padding:20px;width:25%;vertical-align:middle">
+                              <div class="one">
+                                 <div class="two" id='style_image'>
+                                    <img src='images/style_after.gif' width="160">
+                                 </div>
+                                 <img src='images/style_before.png' width="160">
+                              </div>
+                              <script type="text/javascript">
+                                 function style_start() {
+                                   document.getElementById('style_image').style.opacity = "1";
+                                 }
+                                 
+                                 function style_stop() {
+                                   document.getElementById('style_image').style.opacity = "0";
+                                 }
+                                 style_stop()
+                              </script>
+                           </td>
+                           <td style="padding:20px;width:75%;vertical-align:middle">
+                              <a href="https://github.com/zestian56/style-transfer">
+                                 <papertitle>Style-transfer for the creation of aesthetic images</papertitle>
+                              </a>
+                              <br>
+                              <strong>Gustavo A. Salazar-Gomez</strong>,
+                              <a href="https://github.com/MikeS96">Miguel Saavedra</a>,
+                              <a href="https://github.com/zestian56">Sebastian Botero</a>
+                              <br>
+                              <a href="https://github.com/zestian56/style-transfer">code</a> /
+                              <a href="data/styleTransfer.pdf">report (spanish)</a> /
+                              <a href="data/styleTransfer.txt">description</a> 
+                              <p></p>
+                              <p>Style-transfer implementarion based on the paper <a href="https://arxiv.org/abs/1508.06576">A neural algorithm of artistic style</a> using VGG-19.</p>
+                           </td>
+                        </tr>
                         <tr onmouseout="ml3d_stop()" onmouseover="ml3d_start()">
                            <td style="padding:20px;width:25%;vertical-align:middle">
                               <div class="one">
