--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <!-- Google Tag Manager -->
+      <!-- Google Tag Manager 
       <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -10,6 +10,15 @@
          })(window,document,'script','dataLayer','GTM-KN6TMDL');
       </script>
       <!-- End Google Tag Manager -->
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-WF950R9YXX"></script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WF950R9YXX');
+      </script>
       <title>Gustavo A. Salazar-Gomez</title>
       <meta name="author" content="Gustavo A. Salazar-Gomez">
       <meta name="viewport" content="width=device-width, initial-scale=1">
