--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                            <td style="padding:20px;width:100%;vertical-align:middle">
                               <heading>News</heading>
                               <ul>
+                                 <li>
+                                    <strong>[April 2021]</strong> The abstract "High-level camera-LiDAR fusion for 3D object detection with Machine Learning" was accepted to the LatinX in AI Research Workshop at CVPR 2021.
+                                 </li>   
                                  <li> 
                                     <strong>[August 2020]</strong> Started a Postgraduate Diploma in Artificial Intelligence at <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente</a>, the degree will end in June 2021.
                                  </li>
