--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                               <heading>News</heading>
                               <ul>
                                  <li>
-                                    <strong>[April 2021]</strong> The abstract "High-level camera-LiDAR fusion for 3D object detection with Machine Learning" was accepted to the LatinX in AI Research Workshop at CVPR 2021.
+                                    <strong>[April 2021]</strong> The abstract "High-level camera-LiDAR fusion for 3D object detection with Machine Learning" was accepted to the <a href="https://www.latinxinai.org/cvpr-2021-about">LatinX in AI Research Workshop</a> at <a href="http://cvpr2021.thecvf.com/">CVPR 2021</a> as a poster presentation.
                                  </li>   
                                  <li> 
                                     <strong>[August 2020]</strong> Started a Postgraduate Diploma in Artificial Intelligence at <a href="https://www.uao.edu.co/">Universidad Autonoma de Occidente</a>, the degree will end in June 2021.
