--- a/index.html
+++ b/index.html
@@ -89,6 +89,45 @@
                      <tbody>
                         <td style="padding:20px;width:25%;vertical-align:middle">
                            <heading>Publications</heading>
+
+          <tr onmouseout="ml3d_stop()" onmouseover="ml3d_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='ml3d_image'>
+                  <img src='images/3d_after.gif' width="160"></div>
+                <img src='images/3d_before.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function ml3d_start() {
+                  document.getElementById('ml3d_image').style.opacity = "1";
+                }
+
+                function ml3d_stop() {
+                  document.getElementById('ml3d_image').style.opacity = "0";
+                }
+                ml3d_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://github.com/MikeS96/3d_obj_detection">
+                <papertitle>3D object detector for vehicles using classic Machine Learning</papertitle>
+              </a>
+              <br>
+              <strong>Gustavo Salazar</strong>,
+              <a href="https://www.linkedin.com/in/miguel-a-saavedra-ruiz">Miguel Saavedra-Ruiz</a>
+              <a href="https://scholar.google.com.au/citations?user=x3M1JlAAAAAJ&hl=en">Victor Romero-Cano</a>
+              <br>
+              <em>LatinX Workshop at CVPR</em>, 2021 &nbsp <span style="color:#ff0000"><strong>(Poster Presentation)</strong></span> 
+              <br>
+              <a href="https://github.com/MikeS96/3d_obj_detection">code</a> /
+              <a href="https://arxiv.org/abs/2105.11060">arXiv</a> /
+              <a href="https://research.latinxinai.org/papers/cvpr/2021/png/21_poster_21.png">poster</a> /   
+              <a href="data/3dMachineLearning.txt">description</a> 
+              <p></p>
+              <p>3D object detection of vehicles in the NuScenes dataset using classic Machine learning such as DBSCAN and SVMs.</p>
+            </td>
+          </tr>                           
+                           
                         </td>
                         <tr onmouseout="dtl_stop()" onmouseover="dtl_start()">
                            <td style="padding:20px;width:25%;vertical-align:middle">
@@ -236,41 +275,7 @@
                               <p></p>
                               <p>Style-transfer implementarion based on the paper <a href="https://arxiv.org/abs/1508.06576">A neural algorithm of artistic style</a> using VGG-19.</p>
                            </td>
-                        </tr>
-                        <tr onmouseout="ml3d_stop()" onmouseover="ml3d_start()">
-                           <td style="padding:20px;width:25%;vertical-align:middle">
-                              <div class="one">
-                                 <div class="two" id='ml3d_image'>
-                                    <img src='images/3d_after.gif' width="160">
-                                 </div>
-                                 <img src='images/3d_before.png' width="160">
-                              </div>
-                              <script type="text/javascript">
-                                 function ml3d_start() {
-                                   document.getElementById('ml3d_image').style.opacity = "1";
-                                 }
-                                 
-                                 function ml3d_stop() {
-                                   document.getElementById('ml3d_image').style.opacity = "0";
-                                 }
-                                 ml3d_stop()
-                              </script>
-                           </td>
-                           <td style="padding:20px;width:75%;vertical-align:middle">
-                              <a href="https://github.com/gsg213/3d_obj_detection">
-                                 <papertitle>3D object detector for vehicles using classic Machine Learning</papertitle>
-                              </a>
-                              <br>
-                              <strong>Gustavo Salazar</strong>,
-                              <a href="https://www.linkedin.com/in/miguel-a-saavedra-ruiz">Miguel Saavedra-Ruiz</a>
-                              <br>
-                              <a href="https://github.com/gsg213/3d_obj_detection">code</a> /
-                              <a href="data/3d_detection_car_report.pdf">report</a> /
-                              <a href="data/3dMachineLearning.txt">description</a> 
-                              <p></p>
-                              <p>3D object detection of vehicles in the NuScenes dataset using classic Machine learning such as DBSCAN and SVMs.</p>
-                           </td>
-                        </tr>
+                        </tr>                        
                         <tr onmouseout="cnn_stop()" onmouseover="cnn_start()">
                            <td style="padding:20px;width:25%;vertical-align:middle">
                               <div class="one">
